--- a/narod/index.html
+++ b/narod/index.html
@@ -7,7 +7,7 @@
 <body>
 <center><h1 class= "extra" width= 200px>Кто мы?</h1></center>
 <center>
-<div id="osnova1"><h2 class= "text">Я пред&shyстав&shyляю ва&shyниль&shyный сер&shyвер по майн&shyкрафту. Мы от&shyкры&shyлись 9 мар&shyта. Пер&shyвый се&shyзон уже идет око&shyло 4-х ме&shyся&shyцев. По мо&shyим пла&shyнам вто&shyрой се&shyзон нач&shyнет&shyся не ран&shyнее 1 ян&shyва&shyря 2025 года. Са&shyмый боль&shyшой он&shyлайн ко&shyто&shyрый был на на&shyшем сер&shyве&shyре - 13 че&shyло&shyвек.</h2></div>
+<div id="osnova1"><h2 class= "text">Я пред&shyстав&shyляю ва&shyниль&shyный сер&shyвер по майн&shyкрафту. Мы от&shyкры&shyлись 9 мар&shyта. Пер&shyвый се&shyзон уже идет око&shyло 4-х ме&shyся&shyцев. По мо&shyим пла&shyнам вто&shyрой се&shyзон нач&shyнет&shyся не ран&shyнее 1 ян&shyва&shyря 2025 года. Са&shyмый боль&shyшой он&shyлайн ко&shyто&shyрый был на на&shyшем сер&shyве&shyре 13 че&shyло&shyвек.</h2></div>
 <center><h1 class= "extra" width= 200px>Почему мы?</h1></center>
 <div id="osnova2"><h2 class= "text">Глав&shyное - у нас бес&shyплат&shyная про&shyход&shyка и нет до&shyна&shyта. Также, поч&shyти все вре&shyмя на&shyши сер&shyве&shyра ра&shyбо&shyта&shyют с 2-х крат&shyным за&shyпа&shyсом мощ&shyнос&shyти. После не&shyдав&shyне&shyго об&shyнов&shyле&shyния пра&shyвил мы ба&shyним всех ток&shyси&shyков. На сер&shyве&shyре при&shyсут&shyству&shyет дру&shyжес&shyкая ат&shyмос&shyфера.</h2></div>
 <center><h1 class= "extra" width= 200px>Как получить проходку?</h1></center>
