--- a/privatehub/code-1/index.html
+++ b/privatehub/code-1/index.html
@@ -5,7 +5,7 @@
  <link rel="icon" href="favicon-32x32.png" type="image/x-icon"
 </head>
 <body>
-<div id="osnova1"><h2 class= "text">Вы&shyход с ко&shyдом 1 это не&shyпра&shyвиль&shyная вер&shyсия java. Для ее из&shyме&shyне&shyния пе&shyрей&shyди&shyте в уп&shyрав&shyление сер&shyвер&shyом</h2>
+<div id="osnova1"><h2 class= "text">Вы&shyход с ко&shyдом 1 это ошиб&shyка, свя&shyзан&shyная с не&shyпра&shyвиль&shyной вер&shyси&shyей Java. Для ее ис&shyправ&shyле&shyния пе&shyрей&shyди&shyте в уп&shyрав&shyление сер&shyвер&shyом</h2>
 <img class= imgall src= img/one.png>
 <h2 class= "text">Зайдите во вкладку «Запуск»</h2>
 <img class= imgall src= img/two.png>
