--- a/privatehub/sftp/index.html
+++ b/privatehub/sftp/index.html
@@ -5,7 +5,7 @@
  <link rel="icon" href="favicon-32x32.png" type="image/x-icon"
 </head>
 <body>
-<div id="osnova1"><h2 class= "text">Для ус&shyта&shyнов&shyки сбор&shyки на сер&shyвер ска&shyчай&shyте сбор&shyку на ком&shyпью&shyтер. Далее ус&shyта&shyно&shyви&shyте WinScp (или лю&shyбой дру&shyгой sftp клие&shyнт) с<a class= text href="https://winscp.net/eng/download.php">офи&shyци&shyаль&shyно&shyго сай&shyта.</a> Далее, зай&shyди&shyте в управ&shyле&shyние сер&shyве&shyром</h2>
+<div id="osnova1"><h2 class= "text">Для ус&shyта&shyнов&shyки сбор&shyки на сер&shyвер ска&shyчай&shyте сбор&shyку на ком&shyпью&shyтер. Ус&shyта&shyно&shyви&shyте WinScp (или лю&shyбой дру&shyгой sftp клие&shyнт) с<a class= text href="https://winscp.net/eng/download.php">офи&shyци&shyаль&shyно&shyго сай&shyта.</a> Далее, зай&shyди&shyте в управ&shyле&shyние сер&shyве&shyром</h2>
 <img class= imgall src= img/one.png>
 <h2 class= "text">Зайдите во вкладку «Настройки»</h2>
 <img class= imgall src= img/two.png>
