--- a/index (1).html
+++ b/index (1).html
@@ -22,7 +22,7 @@
                 <img src="http://surl.li/azclub" alt="Оборудование" class="icon-img">
                 <div>
                     <div class="highlight-text">Хороший хостинг</div>
-                    <div class="subtext">Очень мощное оборудование - Оборудование только от проверенных поставщиков с DDR4/5 оперативной памятью, быстрыми NVMe дисками, и процессорами Intel Core i9 и Ryzen 9 последних поколений.</div>
+                    <div class="subtext">Мы используем только проверенных провайдеров в Финляндии, поэтому вы не будете испытывать проблем с тпсом или пингом</div>
                 </div>
             </div>
 
@@ -38,7 +38,7 @@
                 <img src="http://surl.li/hotrgs" alt="Установка" class="icon-img">
                 <div>
                     <div class="highlight-text">Приятная сборка</div>
-                    <div class="subtext">Сборка нашего сервера не содержит лишнего, все что в ней есть отбиралось месяцами. В ней вы не найдете мигающих цветов или какой-либо навязчивой хрени, только лаймовый и зеленый.</div>
+                    <div class="subtext">Сборка нашего сервера не содержит лишнего, все что в ней есть отбиралось месяцами. В ней вы не найдете мигающих цветов или какой-либо навязчивой хрени.</div>
                 </div>
             </div>
 
