--- a/index (1).html
+++ b/index (1).html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Почему выбирают нас?</title>
-    <script type="text/javascript" nonce="de2b7c46ccba4ff99e7e1f9ed66" src="//local.adguard.org?ts=1727907002115&amp;type=content-script&amp;dmn=cdn.discordapp.com&amp;app=com.android.chrome&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1"></script>
-<script type="text/javascript" nonce="de2b7c46ccba4ff99e7e1f9ed66" src="//local.adguard.org?ts=1727907002115&amp;name=AdGuard%20Extra&amp;type=user-script"></script><link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
