--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="feature-block">
-                <img src="http://surl.li/djqgrc" alt="Защита" class="icon-img">
+                <img src="img3.png" alt="Защита" class="icon-img">
                 <div>
                     <div class="highlight-text">Отзывчивая администрация</div>
                     <div class="subtext">Все администраторы прошли тщательную проверку. Мы быстро откликнемся на ваши запросы и решим их в минимальные сроки!</div>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="feature-block">
-                <img src="http://surl.li/hotrgs" alt="Установка" class="icon-img">
+                <img src="img4.png" alt="Установка" class="icon-img">
                 <div>
                     <div class="highlight-text">Приятная сборка</div>
                     <div class="subtext">Сборка нашего сервера не содержит лишнего, все что в ней есть отбиралось месяцами. В ней вы не найдете мигающих цветов или какой-либо навязчивой хрени.</div>
